[package]
name = "wasm"
version = "0.1.0"
authors = ["xiao_e_yun <67814228+QAZXSW517@users.noreply.github.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.87"
butterfly-soul-engine = { path = "../ButterflySoulEngine" }
bse-web = { path = "../ButterflySoulEngine.web" }

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.6", optional = true }

getrandom = { version = "0.2.8", features = ["js"] }
rand = "0.8.5"
rustc-hash = "1.1.0"

[dependencies.web-sys]
version = "0.3.4"
features = [
 'CanvasRenderingContext2d',
 'CanvasPattern',
 'ImageBitmap',
 'console'
]

[dev-dependencies]

[profile.release]
opt-level = 3
